--- a/app/views/midis/index.html.erb
+++ b/app/views/midis/index.html.erb
@@ -1,31 +1,33 @@
-<div class="index-container" data-controller="search-midis">
+<div class="index-container">
   <div class="search-bar">
 <!-- ask Johannes if there are any problems with styling this search-form please, thank you -->
 <!--SEARCH START -->
-    <div>
-      <div>
-        <%= form_with url: midis_path, method: :get, html: {class: "d-flex", data: {search_midis_target: "searchform"}} do |f| %>
-          <%= f.text_field :query,
-            class: "form-control",
-            placeholder: "Type a midi title",
-            value: params[:query],
-            data: {
-              search_midis_target: "searchinput",
-              action: "keyup->search-midis#update"
-            }
-          %>
-          <%= f.submit "Search", class: "btn btn-primary" %>
-        <% end %>
-      </div>
-    </div>
+<div data-controller="search-midis">
+  <div>
+    <%= form_with url: midis_path, method: :get, html: {class: "d-flex", data: {search_midis_target: "searchform"}} do |f| %>
+      <%= f.text_field :query,
+        class: "form-control",
+        placeholder: "Type a midi title",
+        value: params[:query],
+        data: {
+          search_midis_target: "searchinput",
+          action: "keyup->search-midis#update"
+        }
+      %>
+      <%= f.submit "Search", class: "btn btn-primary" %>
+    <% end %>
+  </div>
+</div>
 <!--SEARCH END -->
   </div>
   <div class="filter-midis">
     <div class="filter-midis-container">
     <div class="filter-wrap">
+      <%# <%= render "filter/filter.html.erb"%>
       <%= render "filter"%>
+
     </div>
-<!-- ask Johannes if there are any problems with styling this midi_list please, thank you -->
+  <!-- ask Johannes if there are any problems with styling this midi_list please, thank you -->
     <div class="midi-card-list-wrap">
       <%= render "midi_card_list", midis: @midis %>
     </div>
