--- a/app/views/midis/show.html.erb
+++ b/app/views/midis/show.html.erb
@@ -1,11 +1,9 @@
 <div class="container">
   <%# Midi player on top %>
-  <%= render "midis/show_midi", midi: @midi %>
+  <%= render "show_midi", midi: @midi %>
 
   <%# Description and artist info %>
-  <%= render "midis/show_description", midi: @midi %>
+  <%= render "show_description", midi: @midi %>
 
   <%# TODO: Comment section %>
-  <%= render "midis/show_comments", comments: @midi.comments%>
-  <%# what does midi:@midi part do? %>
 </div>
