--- a/app/views/midis/_show_midi.html.erb
+++ b/app/views/midis/_show_midi.html.erb
@@ -8,11 +8,17 @@
   <div class="show-midi-info">
     <h1><%= midi.title %></h1>
     <p><%= midi.category %></p>
-    <div class="show-midi-info-image">Image</div>
+    <div class="show-midi-info-image">
+      <%# <%= line_chart({"2021-01-01" => 2, "2021-01-02" => 3}) %> %>
+    </div>
     <div class="show-midi-bottom">
       <%= render "midi_card_buttons", midi: midi %>
       <%= render "midi_card_tags", midi: midi %>
-      <p>128 bpm (hardcoded)</p>
+      <p>128 bpm (hardcoded)</p> <!-- TODO remove hardcode -->
     </div>
   </div>
+</div>
+
+<div style="background-color: white;">
+  <%= scatter_chart(@chart_data, xtitle: "Time", ytitle: "Key") %>
 </div>
