--- a/app/views/midis/_show_comments.html.erb
+++ b/app/views/midis/_show_comments.html.erb
@@ -11,7 +11,7 @@
 
   <div class="comments">
     <% comments.each do |comment| %>
-      <p><%= comment.content %></p>
+      <p><%= comment.content %> by <%= comment.user.username %></p>
     <% end %>
   </div>
 </div>
