finishes search-bar in index page

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -9,8 +9,11 @@
 @import "home/banner";
 @import "home/search";
 
+@import "search-bar/search_bar";
+
 @import "filter/filter";
 @import "filter/filter_midis";
+@import "filter/filter_toggle_button";
 
 @import "buttons/neon_buttons";
 
