--- a/app/views/midis/index.html.erb
+++ b/app/views/midis/index.html.erb
@@ -2,19 +2,24 @@
   <div class="search-bar">
 <!-- ask Johannes if there are any problems with styling this search-form please, thank you -->
 <!--SEARCH START -->
-    <div>
-      <div>
+    <div class="d-flex justify-content-center">
+      <div class="search-bar-fliter-button-wrap">
         <%= form_with url: midis_path, method: :get, html: {class: "d-flex", data: {search_midis_target: "searchform"}} do |f| %>
           <%= f.text_field :query,
-            class: "form-control",
-            placeholder: "Type a midi title",
+            class: "form-control
+                    bg-black
+                    border-top-0
+                    border-start-0
+                    border-end-0",
+            placeholder: "Type a midi title...",
             value: params[:query],
             data: {
               search_midis_target: "searchinput",
               action: "keyup->search-midis#update"
             }
           %>
-          <%= f.submit "Search", class: "btn btn-primary" %>
+          <%= f.submit "Search", class: "search-botton"%>
+          <button class="filter-botton">filter</button>
         <% end %>
       </div>
     </div>
