--- a/app/views/midis/_midi_card.html.erb
+++ b/app/views/midis/_midi_card.html.erb
@@ -1,10 +1,14 @@
 <div class="midi-card" data-controller="play-midi" data-play-midi-url-value="<%= cloudinary_url(midi.midi_file.key) if  midi.midi_file.attached? %>">
-  <div class="midi-card-play-button" data-action="click->play-midi#playOnClick">
-    <svg width="52" height="51" viewBox="0 0 52 51" fill="none" xmlns="http://www.w3.org/2000/svg">
-    <ellipse cx="25.6155" cy="25.1302" rx="25.6155" ry="25.1302" fill="#0085FF"/>
-    <path d="M37.1706 25.1269L19.7526 35.9803L19.2491 15.0933L37.1706 25.1269Z" fill="white"/>
-    </svg>
+  <div data-play-midi-target="playButton"></div>
+    <div class="midi-card-play-button" data-action="click->play-midi#playOnClick" >
+      <svg width="52" height="51" viewBox="0 0 52 51" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <ellipse cx="25.6155" cy="25.1302" rx="25.6155" ry="25.1302" fill="#0085FF"/>
+        <path d="M37.1706 25.1269L19.7526 35.9803L19.2491 15.0933L37.1706 25.1269Z" fill="white"/>
+      </svg>
+
+    </div>
   </div>
+
   <div class="midi-card-details">
     <div class="midi-card-details-artist"><%= link_to midi.user.username, profile_path(midi.user) %></div>
     <div class="midi-card-details-row-2">
