--- a/app/views/midis/_midi_card_list.html.erb
+++ b/app/views/midis/_midi_card_list.html.erb
@@ -8,7 +8,7 @@
   </p>
   <div class="midis">
     <% midis.each do |midi| %>
-      <%= render "midi_card", midi: midi %>
+      <%= render "/midis/midi_card", midi: midi %>
     <% end %>
   </div>
 </div>
