--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -29,7 +29,7 @@
       <li class="username"> <%= current_user.username %></li>
       <li class="user-avatar"><%= image_tag "bulma.png", class: "avatar-picture" %></li>
       <div class="avatar-dropdown-menu">
-        <li class="avatar-dropdown-item"><%= link_to "Upload Photo", edit_profile_path(current_user), class: "navbar-link" %></li>
+        <li class="avatar-dropdown-item"><%= link_to "Upload Photo", edit_profile_photo_path(current_user), class: "navbar-link" %></li>
         <li class="avatar-dropdown-item"><%= link_to "My profile", profile_path(current_user.profile), class: "navbar-link" %></li>
         <li class="avatar-dropdown-item"><%= link_to "Log out",  destroy_user_session_path, data: {turbo_method: :delete}, class: "navbar-link" %>
       </div>
