--- a/app/views/midis/_midi_card_buttons.html.erb
+++ b/app/views/midis/_midi_card_buttons.html.erb
@@ -42,7 +42,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body" style="color:black">
-        <%= request.original_url %>
+        <%="#{request.url}/#{midi.id}" %>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Thank You!</button>
