added_msg_to_the_line_45

--- a/app/views/midis/_midi_card_buttons.html.erb
+++ b/app/views/midis/_midi_card_buttons.html.erb
@@ -42,7 +42,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body" style="color:black">
-        <%="#{request.url}/#{midi.id}" %>
+        <%="#{request.url}/#{midi.id}" %> <%# code to use for sharing the user profil, need to change 'midi.id' by 'user.id'(jeremy) %>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Thank You!</button>
