Fix calling midi variable @ was missing

--- a/app/views/midis/_show_description.html.erb
+++ b/app/views/midis/_show_description.html.erb
@@ -1,7 +1,7 @@
 <div class="show-description">
   <div class="show-description-artist">
   <% if @midi.user.photo.attached? %>
-    <%= cl_image_tag midi.user.photo.key, height: 150, width: 150, crop: :thumb, gravity: :faces, radius: :max, quality: :auto, background: "#000000" %>
+    <%= cl_image_tag @midi.user.photo.key, height: 150, width: 150, crop: :thumb, gravity: :faces, radius: :max, quality: :auto, background: "#000000" %>
   <% else %>
       <%= image_tag "profile-picture-placeholder.png", height: 150, crop: :fill %>
       <!-- TODO: make image link to user profile -->
