--- a/app/views/profiles/change_photo.html.erb
+++ b/app/views/profiles/change_photo.html.erb
@@ -1,4 +1,4 @@
-<h1>Upload photo</h1>
+<h1>Edit user name</h1>
 <div class="uploader-pic d-flex justify-content-center col-3">
   <%= simple_form_for current_user, url: update_profile_photo_path do |f| %>
     <%= f.input :username %>
