--- a/app/views/midis/_midi_card.html.erb
+++ b/app/views/midis/_midi_card.html.erb
@@ -11,7 +11,36 @@
       <div class="midi-card-details-track"><%= link_to midi.title, midi_path(midi) %></div>
       <div><%= midi.category %></div>
     </div>
-    <div class="midi-card-details-image">Image</div>
+    <div class="midi-card-details-image">
+      <!--
+      # Charting / Plotting START
+      # -------------------------------------------------------------------------------------
+      -->
+      <% json = JSON.parse(midi.midi_json) %>
+      <% chart_data = [] %>
+      <% arr_notes = json["tracks"][0]["notes"] %>
+      <% arr_notes.each { |note| chart_data << [note["time"], note["midi"]] } %>
+      <!-- # find the lowest note -->
+      <% lowest_note = 127 %>
+      <% arr_notes.each do |note| %>
+        <% lowest_note = note["midi"] if note["midi"] < lowest_note %>
+      <% end %>
+      <!-- # find the highest note -->
+      <% highest_note = 1 %>
+      <% arr_notes.each do |note| %>
+        <% highest_note = note["midi"] if note["midi"] > highest_note %>
+      <% end %>
+      <!-- # adjusted y-axis spectrum based on hightes/lowest note -->
+      <% bottom = lowest_note - 5 %>
+      <% bottom = 0 if bottom.negative? %>
+      <% top = highest_note + 5 %>
+       <!--
+      # -------------------------------------------------------------------------------------
+      # Charting / Plotting END
+      -->
+
+      <%= scatter_chart(chart_data, min: bottom, max: top, id: "users-chart", width: :inherit, height: "70px" ) %>
+    </div>
     <div class="midi-card-details-bottom">
       <%= render "midi_card_buttons", midi: midi %>
       <%= render "midi_card_tags", midi: midi %>
