--- a/app/views/midis/_filter.html.erb
+++ b/app/views/midis/_filter.html.erb
@@ -1,8 +1,8 @@
 <div class="filter">
   <div class="filter-by">
-    <button id="filter-close-button">X</button>
-    <p>filter by</p>
-    <button id="filter-save-button">save</button>
+    <%# <button id="filter-close-button">X</button> %>
+    <p class="filter-by-title">filter by</p>
+    <%# <button id="filter-save-button">save</button> %>
   </div>
   <div class="filter-category">
     <p>category</p>
@@ -22,5 +22,7 @@
   <div class="filter-bpm-range">
     <p>BPM Range</p>
   </div>
-  <div class="filter-mood">mood</div>
+  <div class="filter-mood">
+    <p>mood</p>
+  </div>
 </div>
