--- a/app/views/midis/index.html.erb
+++ b/app/views/midis/index.html.erb
@@ -1,7 +1,7 @@
 <div class="index-container" data-controller="search-midis">
-  <div class="search-bar">
 <!-- ask Johannes if there are any problems with styling this search-form please, thank you -->
 <!--SEARCH START -->
+  <div class="search-bar">
     <div class="d-flex justify-content-center">
       <div class="search-bar-fliter-button-wrap">
         <%= form_with url: midis_path, method: :get, html: {class: "d-flex", data: {search_midis_target: "searchform"}} do |f| %>
@@ -18,13 +18,13 @@
               action: "keyup->search-midis#update"
             }
           %>
-          <%= f.submit "Search", class: "search-botton"%>
-          <button class="filter-botton">filter</button>
+          <%# <%= f.submit "Search", class: "search-botton"%>
+          <%# <button class="filter-botton">filter</button> %>
         <% end %>
       </div>
     </div>
-<!--SEARCH END -->
   </div>
+<!--SEARCH END -->
   <div class="filter-midis">
     <div class="filter-midis-container">
     <div class="filter-wrap">
