--- a/app/assets/stylesheets/components/filter/_filter.scss
+++ b/app/assets/stylesheets/components/filter/_filter.scss
@@ -3,6 +3,7 @@
 
 // filter grid setup start
 
+
 .filter-wrap{
   width: 25%;
   min-width: 300px;
@@ -15,9 +16,9 @@
   padding: 0;
   margin: 0;
   display: grid;
-  grid-gap: 10px;
+  // grid-gap: 10px;
   height: 100%;
-  grid-template-rows: 70px 300px 200px 350px;
+  grid-template-rows: 100px 300px 200px 300px;
   grid-template-columns: 1fr;
   grid-template-areas:'filter-by'
                       'filter-category'
@@ -25,10 +26,17 @@
                       'filter-mood';
   font-family: $body-font;
   font-size: 15px;
+  border-right: 1px solid white;
+}
+.filter p {
+  text-transform: uppercase;
+  letter-spacing: 4px;
+  font-weight: bold;
+  // color: $black;
 }
 
 .filter > div {
-  background-color: rgb(63, 70, 71);
+  background-color: $black;
   padding: 20px;
 }
 
