--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -12,8 +12,7 @@
 @import "search-bar/search_bar";
 
 @import "filter/filter";
-@import "filter/filter_midis";
-@import "filter/filter_toggle_button";
+@import "midi_card_list";
 
 @import "buttons/neon_buttons";
 
