--- a/app/views/midis/index.html.erb
+++ b/app/views/midis/index.html.erb
@@ -1,9 +1,9 @@
 <div class="index-container" data-controller="search-midis">
 <!-- ask Johannes if there are any problems with styling this search-form please, thank you -->
 <!--SEARCH START -->
-  <div class="search-bar">
-    <div class="d-flex justify-content-center">
-      <div class="search-bar-fliter-button-wrap">
+  <div class="search-bar-warp d-flex justify-content-center">
+    <div class="search-bar">
+      <div>
         <%= form_with url: midis_path, method: :get, html: {class: "d-flex", data: {search_midis_target: "searchform"}} do |f| %>
           <%= f.text_field :query,
             class: "form-control
@@ -18,6 +18,7 @@
               action: "keyup->search-midis#update"
             }
           %>
+          <div><%= image_tag "search-icon.png", class: "search-icon" %></div>
           <%# <%= f.submit "Search", class: "search-botton"%>
           <%# <button class="filter-botton">filter</button> %>
         <% end %>
@@ -25,8 +26,6 @@
     </div>
   </div>
 <!--SEARCH END -->
-  <div class="filter-midis">
-    <div class="filter-midis-container">
     <div class="filter-wrap">
       <%= render "filter"%>
     </div>
@@ -34,6 +33,4 @@
     <div class="midi-card-list-wrap">
       <%= render "midi_card_list", midis: @midis %>
     </div>
-    </div>
-  </div>
 </div>
