--- a/app/views/midis/index.html.erb
+++ b/app/views/midis/index.html.erb
@@ -19,8 +19,8 @@
             }
           %>
           <div><%= image_tag "search-icon.png", class: "search-icon" %></div>
-          <%# <%= f.submit "Search", class: "search-botton"%>
-          <%# <button class="filter-botton">filter</button> %>
+          <%# <%= f.submit "Search", class: "search-button"%>
+          <%# <button class="filter-button">filter</button> %>
         <% end %>
       </div>
     </div>
