border color changed

--- a/app/assets/stylesheets/components/filter/_filter.scss
+++ b/app/assets/stylesheets/components/filter/_filter.scss
@@ -26,7 +26,7 @@
                       'filter-mood';
   font-family: $body-font;
   font-size: 15px;
-  border-right: 1px solid white;
+  border-right: 0.5px solid grey;
 }
 .filter p {
   text-transform: uppercase;
