font color changed in forms

--- a/app/assets/stylesheets/components/search-bar/_search_bar.scss
+++ b/app/assets/stylesheets/components/search-bar/_search_bar.scss
@@ -9,14 +9,14 @@
   width: 40px;
 }
 
-.form-control{
+.search-bar .form-control{
   background-color: transparent;
   color: white;
   border-radius: 0 !important;
   font-family: $body-font;
 }
 
-.form-control:focus {
+.search-bar .form-control:focus {
   color: white !important;
   outline: none !important;
   box-shadow: none!important;
