--- a/app/views/midis/_filter.html.erb
+++ b/app/views/midis/_filter.html.erb
@@ -4,24 +4,25 @@
     <p class="filter-by-title">filter by</p>
     <%# <button id="filter-save-button">save</button> %>
   </div>
+
   <div class="filter-category">
     <p>category</p>
     <!-- category example start (hard coded) -->
     <div>
-      <input type="checkbox" id="rock" name="rock"
-             checked>
+      <input type="checkbox" id="rock" name="rock" checked>
       <label for="rock">Rock</label>
     </div>
     <div>
-      <input type="checkbox" id="Heavy-metal" name="Heavy-metal"
-             checked>
+      <input type="checkbox" id="Heavy-metal" name="Heavy-metal" checked>
       <label for="Heavy-metal">Heavy Metal</label>
     </div>
     <!-- category example end -->
   </div>
+
   <div class="filter-bpm-range">
     <p>BPM Range</p>
   </div>
+
   <div class="filter-mood">
     <p>mood</p>
   </div>
