simple_form_style_for_the_today

--- a/app/views/profiles/change_photo.html.erb
+++ b/app/views/profiles/change_photo.html.erb
@@ -1,19 +1,12 @@
-<<<<<<< HEAD
 <div class="container col-3">
-  <h1>Upload photo</h1>
-  <div class="uploader_photo">
+  <div class="text-center"><h1>Profil</h1></div>
+  <div class="uploader-pic">
     <%= simple_form_for current_user, url: update_profile_photo_path do |f| %>
+      <%= f.input :username %>
       <%= f.input :photo, as: :file %>
-      <%= f.submit %>
+      <div>
+       <%= f.button :submit, "Confirmed", class: "neon-button-secondary" %>
+      </div>
     <% end %>
   </div>
-=======
-<h1>Edit user name</h1>
-<div class="uploader-pic d-flex justify-content-center col-3">
-  <%= simple_form_for current_user, url: update_profile_photo_path do |f| %>
-    <%= f.input :username %>
-    <%= f.input :photo, as: :file %>
-    <%= f.submit %>
-  <% end %>
->>>>>>> master
 </div>
