--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,7 +1,6 @@
 <div class="container col-3">
-  <h2>Change your password</h2>
-
-  <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+   <div class="text-center"><h1>Change your password</h1></div>
+    <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
     <%= f.error_notification %>
 
     <%= f.input :reset_password_token, as: :hidden %>
@@ -21,7 +20,7 @@
     </div>
 
     <div class="form-actions">
-      <%= f.button :submit, "Change my password" %>
+      <%= f.button :submit, "Change my password", class: "btn btn-light" %>
     </div>
   <% end %>
 
