--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,7 +1,6 @@
 <div class="container col-3">
-  <h2>Forgot your password?</h2>
-
-  <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+  <div class="text-center"><h1>Forgot your password?</h1></div>
+    <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
     <%= f.error_notification %>
 
     <div class="form-inputs">
@@ -11,10 +10,8 @@
                   input_html: { autocomplete: "email" } %>
     </div>
 
-    <div class="form-actions">
-      <%= f.button :submit, "Send me reset password instructions" %>
+    <div class="form-actions align-items-center text-center">
+      <%= f.button :submit, "Reset password", class: "btn btn-light" %>
     </div>
   <% end %>
-
-  <%= render "devise/shared/links" %>
 </div>
