--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,6 @@
 <div class="container col-3">
-  <h2>Sign up</h2>
-
-  <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), data: {turbo: false}) do |f| %>
+  <div class="text-center"><h1>Sign up</h1></div>
+   <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), data: {turbo: false}) do |f| %>
     <%= f.error_notification %>
 
     <div class="form-inputs">
@@ -21,10 +20,8 @@
                   input_html: { autocomplete: "new-password" } %>
     </div>
 
-    <div class="form-actions">
-      <%= f.button :submit, "Sign up" %>
+    <div class="form-actions align-items-center text-center">
+      <%= f.button :submit, "Sign up", class: "btn btn-light, neon-button-secondary, neon-button-search", style: "margin-right: 30px"%>
     </div>
   <% end %>
-
-  <%= render "devise/shared/links" %>
 </div>
