--- a/app/assets/stylesheets/components/home/_logo.scss
+++ b/app/assets/stylesheets/components/home/_logo.scss
@@ -2,7 +2,7 @@
   margin:0;
   padding: 0;
   position: relative;
-  width: 70px;
+  width: 80px;
   height: 100%;
   align-items: center;
   justify-content: space-around;
@@ -26,8 +26,8 @@
 .glow-background::before , .glow-background:after{
   content: '';
   position: absolute;
-  background: linear-gradient(90deg, $neon-blue, white, $neon-blue, $neon-blue, white, $neon-blue);
-  // background: linear-gradient(70deg, #e6fb04, #ff6600, #00ff66, $neon-light-blue, #ff00ff, #ff0099, #6e0dd0, #ff3300, $neon-blue, #e6fb04);
+  // background: linear-gradient(90deg, $neon-blue, white, $neon-blue, $neon-blue, white, $neon-blue);
+  background: linear-gradient(90deg, #e6fb04, #ff6600, #00ff66, $neon-light-blue, #ff00ff, #ff0099, #6e0dd0, #ff3300, $neon-blue, #e6fb04);
   background-size: 400%;
   width: calc(100%);
   height: calc(100%);
