Add a downloadlink to the show page of midi and change picture links

--- a/app/assets/stylesheets/components/_midi_show.scss
+++ b/app/assets/stylesheets/components/_midi_show.scss
@@ -48,6 +48,13 @@
   text-align: center;
 }
 
+.avatar-midi-show {
+  width: 150px;
+  height: 150px;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
 $delete-red: red;
 
 body {
