--- a/app/assets/stylesheets/components/navbar/_navbar.scss
+++ b/app/assets/stylesheets/components/navbar/_navbar.scss
@@ -87,3 +87,11 @@ header {
   transform: scaleX(1);
   transform-origin: bottom left;
 }
+
+
+.navbar-avatar {
+  width: 40px;
+  height: 40px;
+  object-fit: cover;
+  border-radius: 50%;
+}
