--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -56,7 +56,7 @@
 
 <%# cloudinary image from Jeremy %>
 
-<%# <%= cl_image_tag("cld-sample-4",
+<%# <%= image_tag("cld-sample-4",
       width: 400, height: 300, crop: :fill) %>
 
 <%# image Upload from Jeremy %>
