--- a/app/assets/stylesheets/components/_profile_banner.scss
+++ b/app/assets/stylesheets/components/_profile_banner.scss
@@ -26,7 +26,9 @@
 
 .profile-pic {
   border-radius: 50%;
-  margin-right: 20px;
+  width: 150px;
+  height: 150px;
+  object-fit: cover;
 }
 
 .show-share {
