--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container col-3">
-  <div class="text-center"><h1>Forgot your password?</h1></div>
+  <div class="text-center"><h1>Password Forgot?</h1></div>
     <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
     <%= f.error_notification %>
 
