--- a/app/views/midis/edit.html.erb
+++ b/app/views/midis/edit.html.erb
@@ -1,5 +1,5 @@
-<div class="container col-3" data-controller="convert-midi-to-json">
-<h1 class="text-center">Edit your midi</h1>
+<div class="container col-4" data-controller="convert-midi-to-json">
+  <h1 class="text-center">Edit - Midi File</h1>
   <%= simple_form_for(@midi) do |f| %>
     <%= f.input :title %>
     <%= f.input :description %>
