--- a/app/views/midis/new.html.erb
+++ b/app/views/midis/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container col-4" data-controller="convert-midi-to-json">
-    <div class="text-center"><h1>Midi File</h1></div>
+    <div class="text-center"><h1>Add - Midi File</h1></div>
   <%= simple_form_for(@midi) do |f| %>
     <%= f.input :title %>
     <%= f.input :description %>
