--- a/app/views/profiles/change_photo.html.erb
+++ b/app/views/profiles/change_photo.html.erb
@@ -1,5 +1,5 @@
-<div class="container col-3">
-  <div class="text-center"><h1>Profil</h1></div>
+<div class="container col-4">
+  <div class="text-center"><h1>Edit - Profile</h1></div>
   <div class="uploader-pic">
     <%= simple_form_for current_user, url: update_profile_photo_path do |f| %>
       <%= f.input :username %>
