--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="container col-3">
-  <h1>Informations</h1>
+  <h1 class="text-center">Edit - Informations</h1>
   <%= simple_form_for(@profile) do |f| %>
     <%= f.input :bio_description, placeholder: "Insert your bio ..." %>
     <%= f.input :soundcloud_link, placeholder: "Insert SoundCloud link..." %>
