--- a/app/views/midis/_filter.html.erb
+++ b/app/views/midis/_filter.html.erb
@@ -6,7 +6,7 @@
   </div>
 
   <div class="filter-category">
-    <p>category</p>
+    <p class="mb-4">category</p>
     <!-- category example start (hard coded) -->
     <form action="/midis">
       <div>
@@ -33,16 +33,10 @@
         <input type="checkbox" id="plucked" name="Plucked" value="4">
         <label for="plucked">Plucked</label>
       </div>
-      <input type="submit">
+      <div class="category-submit-button-wrap d-flex justify-content-center">
+      <input class="category-submit-button" type="submit" value="save">
+      </div>
     </form>
     <!-- category example end -->
-  </div>
-
-  <div class="filter-bpm-range">
-    <p>BPM Range</p>
-  </div>
-
-  <div class="filter-mood">
-    <p>mood</p>
   </div>
 </div>
