Remove unnecessary download button and change profile link on midi show

--- a/app/views/midis/_show_description.html.erb
+++ b/app/views/midis/_show_description.html.erb
@@ -1,12 +1,14 @@
 <div class="show-description">
   <div class="show-description-artist">
-  <% if @midi.user.photo.attached? %>
-    <%= image_tag @midi.user.photo, class: "avatar-midi-show" %>
-  <% else %>
-      <%= image_tag "profile-picture-placeholder.png", class: "avatar" %>
-      <!-- TODO: make image link to user profile -->
-  <% end %>
-    <p><%= link_to @midi.user.username, profile_path(@midi.user) %></p>
+    <%= link_to(profile_path(@midi.user)) do %>
+      <% if @midi.user.photo.attached? %>
+        <%= image_tag @midi.user.photo, class: "avatar-midi-show" %>
+      <% else %>
+          <%= image_tag "profile-picture-placeholder.png", class: "avatar" %>
+          <!-- TODO: make image link to user profile -->
+      <% end %>
+      <p><%= @midi.user.username %></p>
+    <% end %>
   </div>
   <div>
     <h3>description</h3>
