--- a/app/assets/stylesheets/components/_midi_show.scss
+++ b/app/assets/stylesheets/components/_midi_show.scss
@@ -44,6 +44,16 @@
   gap: 20px;
 }
 
+.show-description a {
+  text-decoration: none;
+  color: white;
+}
+
+.show-description a:hover {
+  text-decoration: none;
+  color: white;
+}
+
 .show-description-artist p {
   text-align: center;
 }
