--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -9,6 +9,8 @@
 @import "home/banner";
 @import "home/search";
 
+@import "image-slide/image_slide";
+
 @import "search-bar/search_bar";
 
 @import "filter/filter";
