--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -29,7 +29,9 @@
       </div>
   </div>
 
-  <div class="rotating-slide">rotating-slide</div>
+  <div class="rotating-slide">
+    <%= render "image_slide"%>
+  </div>
   <div class="midis-container">midis-container</div>
 </div>
 
