--- a/app/views/pages/_image_slide.html.erb
+++ b/app/views/pages/_image_slide.html.erb
@@ -1,10 +1,11 @@
+<p class="slider-title">POPULAR ARTISTS</p>
 <div class="slider">
-  <span style="--i:1;"><%= image_tag "bulma.png", class: "img1" %></span>
-  <span style="--i:2;"><%= image_tag "bulma.png", class: "img1" %></span>
-  <span style="--i:3;"><%= image_tag "bulma.png", class: "img1" %></span>
-  <span style="--i:4;"><%= image_tag "bulma.png", class: "img1" %></span>
-  <span style="--i:5;"><%= image_tag "bulma.png", class: "img1" %></span>
-  <span style="--i:6;"><%= image_tag "bulma.png", class: "img1" %></span>
-  <span style="--i:7;"><%= image_tag "bulma.png", class: "img1" %></span>
-  <span style="--i:8;"><%= image_tag "bulma.png", class: "img1" %></span>
+  <span style="--i:1;"><p class="artist-name">John Mayer</p><%= image_tag "john-mayer.png", class: "img1" %></span>
+  <span style="--i:2;"><p class="artist-name">John Mayer</p><%= image_tag "john-mayer.png", class: "img1" %></span>
+  <span style="--i:3;"><p class="artist-name">John Mayer</p><%= image_tag "john-mayer.png", class: "img1" %></span>
+  <span style="--i:4;"><p class="artist-name">John Mayer</p><%= image_tag "john-mayer.png", class: "img1" %></span>
+  <span style="--i:5;"><p class="artist-name">John Mayer</p><%= image_tag "john-mayer.png", class: "img1" %></span>
+  <span style="--i:6;"><p class="artist-name">John Mayer</p><%= image_tag "john-mayer.png", class: "img1" %></span>
+  <span style="--i:7;"><p class="artist-name">John Mayer</p><%= image_tag "john-mayer.png", class: "img1" %></span>
+  <span style="--i:8;"><p class="artist-name">John Mayer</p><%= image_tag "john-mayer.png", class: "img1" %></span>
 </div>
