--- a/app/assets/stylesheets/components/image-slide/_image_slide.scss
+++ b/app/assets/stylesheets/components/image-slide/_image_slide.scss
@@ -1,18 +1,37 @@
-* {
-  margin: 0;
-  padding: 0;
+// * {
+//   margin: 0;
+//   padding: 0;
+// }
+
+// height: 100%;
+
+.rotating-slide {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  // background: linear-gradient(to bottom, black, #00213f, #00509c, #0085FF, #00509c,  #00213f, black);
 }
 
-// background: linear-gradient(to right, rgba(13, 61, 38, 0.989), black);
-// height: 100%;
+.slider-title{
+  position: absolute;
+  top: 100px;
+  left: 150px;
+  font-family: $body-font;
+  font-size: 25px;
+}
 
 .slider {
   position: relative;
   width: 200px;
   height: 200px;
   transform-style: preserve-3d;
-  animation: slide-rotate 0.1s linear infinite;
-}
+  animation: slide-rotate 30s linear infinite;
+
+  &:hover {
+    animation-play-state: paused;
+  }
+};
 
 @keyframes slide-rotate {
   0%{
@@ -33,6 +52,7 @@
   transform-origin: center;
   transform-style: preserve-3d ;
   transform: rotateY(calc(var(--i)*45deg)) translateZ(350px);
+  // border-bottom: 4px solid red;
 }
 
 .slider span img {
@@ -40,13 +60,30 @@
   top: 0;
   left: 0;
   height: 100%;
+  width: 100%;
   border-radius: 10px;
   object-fit: cover;
   transition: 2s;
 
 }
 
+.slide div {
+  position: relative;
+}
+
+.artist-name{
+  position: absolute;
+  font-family: $body-font;
+  text-transform: uppercase;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  bottom: -12px;
+  text-align: center;
+  // z-index: 100;
+}
+
 .slider span:hover img{
   transform: translateY(-50px) scale(1.2);
-
 }
